2014-01-09
v0.9.9 tehnick
  * Minimize the number of modal dialogs: use other ways for notifying user
    (system messages in chat).

2014-01-06
v0.9.8 tehnick
  * Fix OTRv3 support: added limited support of instance tags. Previous
    temporary solution is not needed anymore. (Affects only build with
    libotr 4.x.)

2013-10-14
v0.9.7 tehnick
  * Fix problem of initialization of private conversation when both sides use
    libotr 4.x. Protocol OTRv2 is forced. This is temporary solution.
  * Fix tiny memory leak when libotr 4.x is used.
  * Tiny improvement in endSession() function when libotr 4.x is used.
  * Better error handling when libotr 4.x is used.

2013-08-13
v0.9.6 taurus
  * Add function returning plugin's icon.
  * Fix build with Qt 5.x.

2013-06-30
v0.9.5 tehnick
  * Add support of libotr >= 4.0.0.

2012-04-04
v0.9.5pre
  * Ignore internal messages, report state changes and notifications
    via system messages
  * The authentication dialog now differs between 'question and answer'
    and 'shared secret', enabling mutual authentication for the latter.
  * Add plugin info

2011-11-17
v0.9.4
  * Add authentication via Socialist Millionaires' Protocol
  * Fix escaping of plaintext OTR messages
  * Ignore incoming messages of type "error"
  * Fix OtrInternal::account_name()
  * Use radio boxes for policy settings
  * Add option to close a session when a contact goes offline
  * Enable sorting for fingerprint and key table

2011-08-22
v0.9.3
  * Fix fetching private keys
  * Finish session when forgetting a fingerprint
  * Enforce Unix line feeds
  * Don't quote non-breaking spaces
  * Use JID instead of account ID in libotr messages
  * Remove HTML from outgoing libotr messages
  * Add key generation and deletion to options
  * Add context menu to fingerprint and private key widget
  * Fix file path encoding for non-UTF-8 systems

v0.9.2
  * Encode strings as UTF-8 before passing them to libotr
  * Fix fingerprint verification and deletion